--- a/repo_git/onlinebookstore/WebContent/SellerLogin.html
+++ b/repo_git/onlinebookstore/WebContent/SellerLogin.html
@@ -1,101 +1,165 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
+  <head>
+    <meta charset="ISO-8859-1" />
+    <title>Book Store</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicons/site.webmanifest" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <style>
+      .AdminLogin {
+        height: 35px;
+        border-radius: 50px;
+        background-color: #ccffcc;
+        color: #078707;
+        font-weight: bold;
+        cursor: pointer;
+        transition: 0.3s;
+        border-color: #078707;
+        border-style: solid;
+        border-width: 1px;
+      }
 
-<head>
-<meta charset="ISO-8859-1">
-<title>Book Store</title>
-<link rel="apple-touch-icon" sizes="180x180"
-	href="./favicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32"
-	href="./favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16"
-	href="./favicons/favicon-16x16.png">
-<link rel="manifest" href="./favicons/site.webmanifest">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" >
-<link rel="stylesheet" href="styles.css">
-<style>
-.AdminLogin {
-	height: 35px;
-	border-radius: 50px;
-	background-color: #ccffcc;
-	color: #078707;
-	font-weight: bold;
-	cursor: pointer;
-	transition: 0.3s;
-	border-color: #078707;
-	border-style: solid;
-	border-width: 1px;
-}
+      .AdminLogin:hover {
+        height: 35px;
+        border-radius: 50px;
+        background-color: white;
+        color: #078707;
+        font-weight: bold;
+        border-style: solid;
+        border-width: 1px;
+        border-color: #078707;
+      }
+    </style>
+  </head>
 
-.AdminLogin:hover {
-	height: 35px;
-	border-radius: 50px;
-	background-color: white;
-	color: #078707;
-	font-weight: bold;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #078707;
-}
-</style>
-</head>
+  <body onload="funload()">
+    <header>
+      <nav class="navbar navbar-expand-sm bg-dark">
+        <a class="navbar-brand">
+          <!-- The below line can be an image or a h1, either will work -->
+          <img src="logo.png" alt="Google logo" width="60" height="30px" />
+        </a>
 
-<body onload="funload()">
-	<header>
-		<nav class="navbar navbar-expand-sm bg-dark">
-				<a class="navbar-brand">
-					<!-- The below line can be an image or a h1, either will work -->
-					<img src="logo.png" alt="Google logo" width="60" height="30px">
-				</a>
-				
-				<button style="background-color:white;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				    <span class="navbar-toggler-icon"></span>
-				 </button>
+        <button
+          style="background-color: white"
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <div class="collapse navbar-collapse" id="navbarNav">                
-				<ul class="navbar-nav" >
-					<li class="nav-item"><span><a class="nav-link" href="index.html">Home</a></span></li>
-					<li class="nav-item "><span><a class="nav-link active" href="login.html">Login</a></span></li>
-					<li class="nav-item "><span><a class="nav-link" href="CustomerRegister.html">Register</a></span></li>
-				</ul>
-				</div>
-			</nav>
-	</header>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <span><a class="nav-link" href="index.html">Home</a></span>
+            </li>
+            <li class="nav-item">
+              <span
+                ><a class="nav-link active" href="login.html">Login</a></span
+              >
+            </li>
+            <li class="nav-item">
+              <span
+                ><a class="nav-link" href="CustomerRegister.html"
+                  >Register</a
+                ></span
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-	<div id="topmid">
-		<h1>Welcome to Online Book Store</h1>
-	</div>
+    <div id="topmid">
+      <h1>Welcome to Online Book Store</h1>
+    </div>
 
-	<form action="adminlog" method="post">
-		<table class="tab" style="width:40%">
-			<thead>
-				<tr style="color:brown;">
-					<th colspan="2">Admin LOGIN</th>
-				</tr>
-				</thead>
-				<tbody>
-				<tr><td><a href="CustomerLogin.html" style="color:blue; font-size:medium; ">Not an Admin?, Click Here to Login as Customer</a></td></tr>
-				<tr>
-					<td>
-						<label for="userName">Username : </label> 
-						<input type="text"
-							name="username" id="userName" placeholder="Enter your Username"><br />
-						<br /> 
-					
-						<label for="Password">Password : </label>
-						<input
-							type="password" name="password" placeholder="Enter Password"
-							id="Password"><br /> <br /> 
-						<input class="AdminLogin"
-							type="submit" value=" Login as an Admin  ">
-					</td>
-				</tr>
-				</tbody>
-		</table>
-	</form>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" ></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"></script>
-</body>
+    <form action="adminlog" method="post">
+      <table class="tab" style="width: 40%">
+        <thead>
+          <tr style="color: brown">
+            <th colspan="2">Admin LOGIN</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <a
+                href="CustomerLogin.html"
+                style="color: blue; font-size: medium"
+                >Not an Admin?, Click Here to Login as Customer</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="userName">Username : </label>
+              <input
+                type="text"
+                name="username"
+                id="userName"
+                placeholder="Enter your Username"
+              /><br />
+              <br />
 
+              <label for="Password">Password : </label>
+              <input
+                type="password"
+                name="password"
+                placeholder="Enter Password"
+                id="Password"
+              /><br />
+              <br />
+              <input
+                class="AdminLogin"
+                type="submit"
+                value=" Login as an Admin  "
+              />
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </form>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
