--- a/repo_git/onlinebookstore/WebContent/index.html
+++ b/repo_git/onlinebookstore/WebContent/index.html
@@ -1,68 +1,117 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
+  <head>
+    <meta charset="ISO-8859-1" />
+    <title>Book Store</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicons/site.webmanifest" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body onload="funload()">
+    <header>
+      <nav class="navbar navbar-expand-sm bg-dark">
+        <a class="navbar-brand">
+          <!-- The below line can be an image or a h1, either will work -->
+          <img src="logo.png" alt="Google logo" width="60" height="30px" />
+        </a>
 
-<head>
-<meta charset="ISO-8859-1">
-<title>Book Store</title>
-<link rel="apple-touch-icon" sizes="180x180"
-	href="./favicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32"
-	href="./favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16"
-	href="./favicons/favicon-16x16.png">
-<link rel="manifest" href="./favicons/site.webmanifest">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" >
-<link rel="stylesheet" href="styles.css">
+        <button
+          style="background-color: white"
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-</head>
-<body onload="funload()">
-	<header>
-		<nav class="navbar navbar-expand-sm bg-dark">
-				<a class="navbar-brand">
-					<!-- The below line can be an image or a h1, either will work -->
-					<img src="logo.png" alt="Google logo" width="60" height="30px">
-				</a>
-				
-				<button style="background-color:white;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				    <span class="navbar-toggler-icon" ></span>
-				 </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <span><a class="nav-link active" href="index.html">Home</a></span>
+            </li>
+            <li class="nav-item">
+              <span
+                ><a class="nav-link" href="CustomerLogin.html">Login</a></span
+              >
+            </li>
+            <li class="nav-item">
+              <span
+                ><a class="nav-link" href="CustomerRegister.html"
+                  >Register</a
+                ></span
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <br />
+    <div id="topmid">
+      <h1>Welcome to Online <br />Book Store</h1>
+    </div>
+    <br />
+    <table class="tab">
+      <thead>
+        <tr>
+          <th>Message</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <a href="index.html" id="happy"
+              >Happy Learning!!<br />Welcome to our book store!</a
+            >
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-                <div class="collapse navbar-collapse" id="navbarNav">                
-				<ul class="navbar-nav" >
-					<li class="nav-item"><span><a class="nav-link active" href="index.html">Home</a></span></li>
-					<li class="nav-item "><span><a class="nav-link" href="CustomerLogin.html">Login</a></span></li>
-					<li class="nav-item "><span><a class="nav-link" href="CustomerRegister.html">Register</a></span></li>
-				</ul>
-				</div>
-			</nav>
-	</header>
-	<br>
-	<div id="topmid"><h1>Welcome to Online <br>Book Store</h1></div>
-	<br>
-	<table class="tab">
-		<thead>
-			<tr>
-				<th>Message</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td><a href="index.html" id="happy">Happy Learning!!<br>Welcome to our book store!</a></td>
-			</tr>
-		</tbody>
-	</table>
-
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" ></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"></script>
-	<script>
-		// Preloder script
-		var tmp = document.getElementById("loding");
-		function funload() {
-		  loding.style.display = "none";
-		}
-	  </script>
-
-
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      // Preloder script
+      var tmp = document.getElementById("loding");
+      function funload() {
+        loding.style.display = "none";
+      }
+    </script>
+  </body>
 </html>
